--- a/happiness_total.ipynb
+++ b/happiness_total.ipynb
@@ -1643,11 +1643,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7dc2ee57-1d76-4206-8f47-cc8822a4a792",
+   "metadata": {},
+   "source": [
+    "### 3.5 Сохраним обработанный датасет в csv-файл для дальнейшего анализа."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "319fce15-5ea8-4e48-baf1-598d0f94019d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happiness_total.to_csv('happiness_total.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd741cf5-282e-40ed-adff-0b0c5eca8463",
    "metadata": {},
    "source": [
     "## 4. Анализ данных, расчет показателей, поиск взаимосвязей."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976d62a0-5608-46c2-bfb7-5947563abfcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
