Creating a website and preparing a presentation

--- a/happiness_total.ipynb
+++ b/happiness_total.ipynb
@@ -32,7 +32,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "ceaa7276-4946-434f-bf81-e43ed6d88321",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
